updated projects page

--- a/projects.html
+++ b/projects.html
@@ -445,20 +445,21 @@ div.tocify {
 <em>John Jones Surgical Society Fellowship</em><br />
 <a href="https://columbiasurgery.org/alumni/john-jones-surgical-society"><em>John Jones Surgical Society</em></a></p>
 </div>
-<div id="surgical-innovation" class="section level2">
-<h2>Surgical Innovation</h2>
-<div id="patents" class="section level3">
-<h3>Patents<br />
-</h3>
 </div>
-<div id="awards-and-course" class="section level3">
-<h3>Awards and Course<br />
-</h3>
+<div id="surgical-innovation" class="section level1">
+<h1><u>Surgical Innovation</u><br />
+</h1>
+<div id="patents" class="section level2">
+<h2>Patents<br />
+</h2>
 </div>
-<div id="start-up" class="section level3">
-<h3>Start Up<br />
-</h3>
+<div id="awards-and-course" class="section level2">
+<h2>Awards and Course<br />
+</h2>
 </div>
+<div id="start-up" class="section level2">
+<h2>Start Up<br />
+</h2>
 </div>
 </div>
 
