--- a/index.html
+++ b/index.html
@@ -382,22 +382,27 @@ div.tocify {
 </div>
 <div id="about-our-research" class="section level2">
 <h2>About Our Research</h2>
-<p>The primary focus of our laboratory research is</p>
+<p>Coming soon</p>
 <p><br />
 </p>
 </div>
 <div id="lab-in-the-news" class="section level2">
 <h2>Lab in the News</h2>
+<p>Coming soon</p>
 <p><br />
 </p>
 </div>
 <div id="social-media" class="section level2">
 <h2>Social Media</h2>
+<p>Coming soon</p>
 <p><br />
 </p>
 </div>
 <div id="photos" class="section level2">
 <h2>Photos</h2>
+<p>Coming soon</p>
+<p><br />
+</p>
 </div>
 <div id="navigate" class="section level2">
 <h2>Navigate</h2>
