--- a/index.html
+++ b/index.html
@@ -372,16 +372,16 @@ div.tocify {
 </div>
 
 
-<div id="welcome" class="section level1">
-<h1>Welcome</h1>
+<p><br />
+</p>
 <div id="our-lab" class="section level2">
 <h2>Our Lab</h2>
 <p>Welcome to the Ferrari Laboratory website, we are located at the Columbia University Irving Medical Center in New York City, New York.</p>
 <p><br />
 </p>
 </div>
-<div id="about-our-research" class="section level2">
-<h2>About Our Research</h2>
+<div id="our-research" class="section level2">
+<h2>Our Research</h2>
 <p>Coming soon</p>
 <p><br />
 </p>
@@ -430,7 +430,6 @@ div.tocify {
 <p><a href="https://columbiasurgery.org/general-surgery-residency">Columbia Surgery Residency Program</a></p>
 <p><br />
 </p>
-</div>
 </div>
 </div>
 
