--- a/about.html
+++ b/about.html
@@ -413,11 +413,13 @@ div.tocify {
 <h3>Surgical Residents</h3>
 <p><em>Alexey Abramov, MD</em></p>
 <p><img src="images/abramov.jpg" style="width:25.0%" /></p>
-<p>Dr. Alexey Abramov is a General Surgery resident in the <a href="https://columbiasurgery.org/general-surgery-residency">New York Presbyterian-Columbia</a> program with an interest in cardiothoracic surgery fellowship and biomedical engineering. He graduated from <a href="http://college.emory.edu/main/index.html">Emory University</a> (Atlanta, GA) and received his medical degree from <a href="https://www.nymc.edu/school-of-medicine-som/">New York Medical College</a> (Valhalla, NY). Currently, he is a post-doctoral research fellow in Dr. Ferrari’s lab and pursuing a Master’s degree in the Department of Biostatistics in the Mailmans School of Public Health in the <a href="https://www.publichealth.columbia.edu/academics/degrees/master-science/clinical-research-methods">Clinical Research Methods</a> track. In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bike.</p>
+<p>Dr. Alexey Abramov is a General Surgery resident in the <a href="https://columbiasurgery.org/general-surgery-residency">New York Presbyterian-Columbia</a> program with an interest in cardiothoracic surgery fellowship and biomedical engineering. He graduated from <a href="http://college.emory.edu/main/index.html">Emory University</a> (Atlanta, GA) and received his medical degree from <a href="https://www.nymc.edu/school-of-medicine-som/">New York Medical College</a> (Valhalla, NY). Currently, Alexey is a post-doctoral research fellow in Dr. Ferrari’s lab studying the underlying mechanisms of structural degeneration of bioprosthetic heart valves with next-generation proteomics. He is also pursuing a Master’s degree in the Department of Biostatistics in the Mailmans School of Public Health in the <a href="https://www.publichealth.columbia.edu/academics/degrees/master-science/clinical-research-methods">Clinical Research Methods</a> track. In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bike.</p>
 <p><a href="mailto:%3Caa3832@cumc.columbia.edu%3E">Email</a></p>
 <p><em>Dov Levine, MD</em></p>
 <p><em>Clinton Erwin, MD</em></p>
 <p><img src="images/clint.jpg" style="width:25.0%" /></p>
+<p>Clinton is a resident in Integrated Cardiothoracic surgery at New York Presbyterian-Columbia. He obtained his MD from University of Alabama, Birmingham, where he developed an interest in cardiac surgery. / Now having completed 3 years of residency, he is currently studying the mechanisms of cardiovascular damage related to COVID-19, along with several clinical projects in adult cardiac surgery.</p>
+<p><a href="mailto:%3Cwe2153@cumc.columbia.edu%3E">Email</a></p>
 <p><em>Michael Simpson, MD</em></p>
 <p><br />
 </p>
