--- a/projects.html
+++ b/projects.html
@@ -386,6 +386,7 @@ div.tocify {
 <div id="ischemic-mitral-regurgitation" class="section level2">
 <h2>Ischemic Mitral Regurgitation<br />
 </h2>
+<p>Ischemic mitral regurgitation (IMR) often develops after an ischemic event, which results in distortion of the valvulo-ventricular complex and incomplete mitral valve (MV) leaflet coaptation. After left ventricular ischemic events, only some patients develop IMR. The susceptibility of the MV to remodel may influence whether IMR develops. We hypothesized that impaired signaling response in MV cells may contribute to IMR development by inducing maladaptive tissue remodeling.</p>
 <p><br />
 </p>
 </div>
@@ -396,6 +397,7 @@ div.tocify {
 <div id="calcific-aortic-valve-disease" class="section level2">
 <h2>Calcific Aortic Valve Disease<br />
 </h2>
+<p>This program is concerned with modulating oxidative glycation reactions in specimens from patients with variable degrees of Calcific Aortic Valve Disease (CAVD), a disease which, despite decades of investigation, remains without effective medical therapy. CAVD defines a spectrum of disorders from initial asymptomatic remodeling (aortic valve sclerosis; AVSc) to outflow obstruction (Aortic Stenosis, AS) that result in heart failure and death if not treated surgically. Over 30% of patients over 65 years of age have some degree AVSc and close to 10% of those develop severe symptomatic AS within a decade from diagnosis. Once AVSc is detected, there is an increased risk of adverse cardiovascular events. At the onset of mild symptoms (early AS), survival is further reduced, with a dramatic decline in patients with severe symptomatic AS. Thus, understanding the development of AVSc and its progression into AS is of high clinical significance for a very large cohort of patients. CAVD defines a spectrum of diseases from initial structural remodeling to outflow obstruction that could result in heart failure, and death. We discovered that glyco-oxidation moieties impact the AV via two pathological mechanisms: First, they modify the ECM via cross-linking of collagen/elastin and permanent incorporation of glycated circulating proteins. Second, they activate VICs towards the osteogenic phenotype: AGE binds RAGE which, via NADPH, generates ROS. AGEs and ROS mediate the DNA damage response that controls VIC phenotype. Both mechanisms lead to stiffening, mass increase, and calcification.</p>
 <p><br />
 </p>
 </div>
@@ -407,6 +409,8 @@ div.tocify {
 <h2>Aortic Aneurysm and Dissection<br />
 </h2>
 <p>Bicuspid Aortic Valve (BAV) syndrome is associated with frequent and premature occurrence of calcific aortic stenosis (AS) and thoracic aortic aneurysms (TAA), with 30-50% of BAV patients requiring surgery in their lifetime for AS, TAA, or both. It is estimated that 1.4% of the population is born with a BAV, making it the most common congenital heart defect in the US. Eccentric flow dynamics, endothelial dysfunction, and genetic predisposition are key elements impacting the susceptibility of BAV patients to adverse aortic events. Dissection and rupture are mechanical failures of the aortic wall that occurs when the tensile limit of the aortic tissue is overwhelmed. To prevent these events, the ascending aorta is preventively replaced in high-risk patients. The major clinical obstacles hampering the decisions of whether replace the ascending aorta of BAV patients are the absence, in the current guidelines, of any tools informing on the structural integrity of the aortic wall independently of metric measurements and of any non-invasive risk-assessment tools. Here we tested the mechanistic hypothesis that mitigation of glycoxidation reactions revert AGE-mediated paracellular endothelial hyperpermeability and reduce the accumulation of glycol-oxidation products in the ascending aorta of BAV patients.</p>
+<p><em>Funding Source</em><br />
+<em>R01 HL122805</em></p>
 </div>
 </div>
 <div id="biomedical-engineering" class="section level1">
@@ -415,6 +419,9 @@ div.tocify {
 <h2>Glycation-mediated mechanisms of Bioprosthetic Heart Valve Failure<br />
 </h2>
 <p>Heart valve disease at this time can only be treated surgically, with either valve replacement or repair. Bioprosthetic heart valves (BHV), fabricated from glutaraldehyde fixed heterografts, such as bovine pericardium (BP) or porcine aortic valves (PAV), are widely used in both cardiac surgery and in transcatheter valve replacements. Despite outstanding short-term outcomes, BHV dysfunction due to structural valve leaflet degeneration (SVD) develops over time, frequently necessitating device replacement. Calcification is observed in the majority of SVD cases; however, 25% or more SVD cases are not associated with calcification. Recent work from our group demonstrated that BHV are susceptible to non-calcification induced failure mechanisms, involving the formation of unique oxidized amino acids (OxAA) in BHV, such as the crosslink, di-tyrosine (di-Tyr). Feasibility studies also recently documented in BHV explant samples the presence of advanced glycation end products (AGE). The contributions of both AGE and OxAA to SVD pathophysiology has not been previously investigated by our group or others. We are studying the hypotheses that the accumulation of AGE in BHV leaflets together with the receptor for AGE (RAGE) mediated inflammatory response, and OxAA modification of structural proteins contribute to BHV SVD. These mechanisms also are hypothesized to interact with BHV calcification and co-morbidities, such as diabetes and coronary artery disease to enhance SVD.</p>
+<p><em>Funding Source</em><br />
+<em>R01HL143008</em><br />
+<a href="https://reporter.nih.gov/search/EpM1RwPYiUeXjqUjLqrCFg/project-details/10202704">NIH Reporter</a></p>
 <p><br />
 </p>
 </div>
