--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
+<div class="hero-image"> 
+        <div class="image-text">
+          <div class="top-text">Ferrari Lab</div>
+            <div class="bottom-text">Welcome</div>
+        </div>
+</div>
 
 <style type="text/css">
   code{white-space: pre-wrap;}
@@ -62,6 +68,7 @@ if (window.hljs) {
 
 
 
+<link rel="stylesheet" href="style.css" type="text/css" />
 
 
 
