--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ div.tocify {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Ferrari Lab Website</a>
+      <a class="navbar-brand" href="index.html">Ferrari Lab @ Columbia</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
