--- a/hero-image.html
+++ b/hero-image.html
@@ -1,6 +1,6 @@
 <div class="hero-image"> 
         <div class="image-text">
-          <div class="top-text">Ferrari Lab</div>
-            <div class="bottom-text">Welcome</div>
+          <div class="top-text">Welcome to the</div>
+            <div class="bottom-text">Ferrari Lab at Columbia University</div>
         </div>
 </div>
