--- a/projects.html
+++ b/projects.html
@@ -376,7 +376,7 @@ div.tocify {
 <p><br />
 </p>
 <div id="mitral-valve" class="section level1">
-<h1><u>Mitral Valve </u><br />
+<h1>Mitral Valve<br />
 </h1>
 <div id="myxomatous-mitral-valve-disease" class="section level2">
 <h2>Myxomatous Mitral Valve Disease</h2>
@@ -400,7 +400,7 @@ div.tocify {
 </div>
 </div>
 <div id="aortic-valve" class="section level1">
-<h1><u>Aortic Valve</u><br />
+<h1>Aortic Valve<br />
 </h1>
 <div id="calcific-aortic-valve-disease" class="section level2">
 <h2>Calcific Aortic Valve Disease<br />
@@ -418,7 +418,7 @@ div.tocify {
 </div>
 </div>
 <div id="aorta" class="section level1">
-<h1><u>Aorta</u><br />
+<h1>Aorta<br />
 </h1>
 <div id="aortic-aneurysm-and-dissection" class="section level2">
 <h2>Aortic Aneurysm and Dissection<br />
@@ -438,7 +438,7 @@ div.tocify {
 </div>
 </div>
 <div id="biomedical-engineering" class="section level1">
-<h1><u>Biomedical Engineering</u></h1>
+<h1>Biomedical Engineering</h1>
 <div id="glycation-mediated-mechanisms-of-bioprosthetic-heart-valve-failure" class="section level2">
 <h2>Glycation-mediated mechanisms of Bioprosthetic Heart Valve Failure<br />
 </h2>
@@ -491,7 +491,7 @@ div.tocify {
 </div>
 </div>
 <div id="covid-19-related-cardiomyopathy" class="section level1">
-<h1><u>Covid-19 Related Cardiomyopathy</u></h1>
+<h1>Covid-19 Related Cardiomyopathy</h1>
 <div id="mechanisms-of-cardiac-remodeling-in-covid-19-patients" class="section level2">
 <h2>Mechanisms of Cardiac Remodeling in COVID-19 Patients</h2>
 <p>As a result of the COVID-19 pandemic, it has been shown that patients with pre-existing heart disease are likely to have more severe COVID-19 symptoms than those without pre-existing heart disease. We seek to test the hypothesis that SARS-CoV-2 induces cardiac injury by decreasing ACE2-mediated cardioprotection, and exacerbating AGE/RAGE-mediated cell signaling mechanisms. The 2 major things we seek to address are if this cell signaling pathway induces cardiac injury, and if circulating RAGE signaling markers be used as biomarkers of cardiovascular injury during acute COVID infection, and after recovery from infection.</p>
@@ -510,7 +510,7 @@ div.tocify {
 </div>
 </div>
 <div id="surgical-innovation" class="section level1">
-<h1><u>Surgical Innovation</u><br />
+<h1>Surgical Innovation<br />
 </h1>
 <div id="patents" class="section level2">
 <h2>Patents<br />
