updated text at index

--- a/index.html
+++ b/index.html
@@ -418,13 +418,13 @@ div.tocify {
 <div id="ferrari-lab-internal-links" class="section level3">
 <h3>Ferrari Lab Internal Links</h3>
 <p><a href="about.html">About Us</a><br />
-</p>
+Meet our team</p>
 <p><a href="projects.html">Projects and Publications</a><br />
-</p>
+Learn about our ongoing projects and publications</p>
 <p><a href="biobank.html">Biobank Inquiries</a><br />
-</p>
+Resources for accessing our biobank</p>
 <p><a href="program.html">Research Program for Residents</a><br />
-</p>
+Integrated program for surgical residents interested in a career in translational science</p>
 <p><br />
 </p>
 </div>
