--- a/index.html
+++ b/index.html
@@ -415,8 +415,8 @@ div.tocify {
 <h2>Navigate</h2>
 <p><br />
 </p>
-<div id="ferrari-lab-internal-links" class="section level3">
-<h3>Ferrari Lab Internal Links</h3>
+<div id="ferrari-lab-links" class="section level3">
+<h3>Ferrari Lab Links</h3>
 <p><a href="about.html">About Us</a><br />
 Meet our team</p>
 <p><a href="projects.html">Projects and Publications</a><br />
@@ -428,8 +428,8 @@ Integrated program for surgical residents interested in a career in translationa
 <p><br />
 </p>
 </div>
-<div id="external-links" class="section level3">
-<h3>External Links</h3>
+<div id="columbia-university-links" class="section level3">
+<h3>Columbia University Links</h3>
 <p><a href="https://columbiasurgery.org/research/ferrari-lab">Ferrari Lab – Columbia Biobank for Translational Science</a><br />
 </p>
 <p><a href="https://columbiasurgery.org/heart">Columbia Cardiac Surgery</a><br />
