--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Ferrari Lab</title>
+<title>index.knit</title>
 
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -373,8 +373,6 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Ferrari Lab</h1>
-<h3 class="subtitle"><em>Columbia University Irving Medical Center Cardiothoracic Surgery Research Program</em></h3>
 
 </div>
 
