--- a/about.html
+++ b/about.html
@@ -429,6 +429,8 @@ div.tocify {
 <p>Clinton is a resident in Integrated Cardiothoracic surgery at New York Presbyterian-Columbia. He obtained his MD from University of Alabama, Birmingham, where he developed an interest in cardiac surgery. / Now having completed 3 years of residency, he is currently studying the mechanisms of cardiovascular damage related to COVID-19, along with several clinical projects in adult cardiac surgery.</p>
 <p><a href="mailto:%3Cwe2153@cumc.columbia.edu%3E">Email</a></p>
 <p><em>Michael Simpson, MD</em></p>
+<p>Michael is a resident in the Integrated Cardiothoracic Surgery residency program at New York Presbyterian-Columbia. He obtained his MD from Columbia University College of Physicians &amp; Surgeons. He has completed three years of his cardiac surgical training and has an interest in aortic surgery and structural heart disease. He is currently studying pathologic mechanisms in mitral valve disease and is involved in several clinical projects across the spectrum of adult cardiac surgery.</p>
+<p><a href="mailto:%3Cmts2153@cumc.columbia.edu%3E">Email</a></p>
 <p><br />
 </p>
 </div>
