--- a/about.html
+++ b/about.html
@@ -377,7 +377,10 @@ div.tocify {
 <h1>Our Team</h1>
 <div id="primary-investigator" class="section level2">
 <h2><u>Primary Investigator</u></h2>
-<p><em>Giovanni Ferrari, PhD</em></p>
+<p><br />
+</p>
+<div id="giovanni-ferrari-phd" class="section level3">
+<h3>Giovanni Ferrari, PhD</h3>
 <p><img src="images/ferrari.jpg" style="width:25.0%" /></p>
 <p>First-generation graduate (U of Pavia, 2003), I am a group leader and Associate Professor (with tenure) at Columbia University, Dept. of Surgery and Biomedical Engineering. I am Scientific Director of the Cardiothoracic Research Program and Director of the Columbia Biobank for Translational Science, an applied biobank supporting translational and precision medicine initiatives. Heart valve and vascular cell physiology, cardiac mechanobiology, materials science in medical devices, and the brain-heart axis are my main research interests.</p>
 <p></right></p>
@@ -388,10 +391,10 @@ div.tocify {
 <p><br />
 </p>
 </div>
-<div id="lab-members" class="section level2">
-<h2><u> Lab Members </u></h2>
-<div id="associate-research-scientists" class="section level3">
-<h3>Associate Research Scientists</h3>
+<div id="lab-members" class="section level3">
+<h3><u> Lab Members </u></h3>
+<div id="associate-research-scientists" class="section level4">
+<h4>Associate Research Scientists</h4>
 <p><em>Esti Castillero, PhD</em></p>
 <p><img src="images/esti.png" style="width:25.0%" /></p>
 <p>I am a Biomedical Researcher with a PhD in Physiology and Endocrinology. My research focuses on the study of the advanced stages of myocardial and cardiac valve remodeling. My research argues that cardiac remodeling is regulated both at a local and systemic level and that it may, in turn, affect remote tissues by endocrine crosstalk. Currently, I am leading projects that explore myocardium-cardiac valve communication in the adaptation to ischemic injury and the role of circulating factors from the skeletal muscle in cardiac remodeling in end-stage heart failure.</p>
@@ -405,8 +408,8 @@ div.tocify {
 <p><br />
 </p>
 </div>
-<div id="postdoctoral-research-fellows" class="section level3">
-<h3>Postdoctoral Research Fellows</h3>
+<div id="postdoctoral-research-fellows" class="section level4">
+<h4>Postdoctoral Research Fellows</h4>
 <p><em>Yingfei Xue, PhD</em><br />
 </p>
 <p><img src="images/xue.JPG" style="width:25.0%" /></p>
@@ -417,8 +420,8 @@ div.tocify {
 <p><br />
 </p>
 </div>
-<div id="surgical-residents" class="section level3">
-<h3>Surgical Residents</h3>
+<div id="surgical-residents" class="section level4">
+<h4>Surgical Residents</h4>
 <p><em>Alexey Abramov, MD</em></p>
 <p><img src="images/abramov.jpg" style="width:25.0%" /></p>
 <p>Dr. Alexey Abramov is a General Surgery resident in the <a href="https://columbiasurgery.org/general-surgery-residency">New York Presbyterian-Columbia</a> program with an interest in cardiothoracic surgery fellowship and biomedical engineering. He graduated from <a href="http://college.emory.edu/main/index.html">Emory University</a> (Atlanta, GA) and received his medical degree from <a href="https://www.nymc.edu/school-of-medicine-som/">New York Medical College</a> (Valhalla, NY). Currently, Alexey is a post-doctoral research fellow in Dr. Ferrari’s lab studying the underlying mechanisms of structural degeneration of bioprosthetic heart valves with next-generation proteomics. He is also pursuing a Master’s degree in the Department of Biostatistics in the Mailmans School of Public Health in the <a href="https://www.publichealth.columbia.edu/academics/degrees/master-science/clinical-research-methods">Clinical Research Methods</a> track. In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bike.</p>
@@ -434,8 +437,8 @@ div.tocify {
 <p><br />
 </p>
 </div>
-<div id="biobank" class="section level3">
-<h3>Biobank</h3>
+<div id="biobank" class="section level4">
+<h4>Biobank</h4>
 <p><em>Vivian Moreno</em></p>
 <p><img src="images/viv.jpg" style="width:25.0%" /></p>
 <p>Vivian Moreno is the Clinical Research Coordinator for the Ferrari Lab. She completed her Bachelor’s of Science in Biomedical Science at the University of Kent in Canterbury, England. Her research background includes cancer research at Yale University and novel antimicrobial peptides at NovaBiotics, Ltd. Her favorite pastimes include playing the piano, volunteering, and working out at AARMY.</p>
@@ -443,52 +446,58 @@ div.tocify {
 <p><br />
 </p>
 </div>
-<div id="lab-manager" class="section level3">
-<h3>Lab Manager</h3>
+<div id="lab-manager" class="section level4">
+<h4>Lab Manager</h4>
 <p><em>Mangesh Kurade</em></p>
 <p><br />
 </p>
 </div>
-<div id="medical-students" class="section level3">
-<h3>Medical Students</h3>
+<div id="medical-students" class="section level4">
+<h4>Medical Students</h4>
 <p><em>Nicolo Vitale (U of Milan)</em></p>
 <p><img src="images/niko.jpg" style="width:25.0%" /></p>
 <p><em>Eduardo (U of Bologna)</em></p>
-<p><em>Ervin (Morehouse School of Medicine)</em></p>
+<p><em>Evan (Morehouse School of Medicine)</em></p>
 <p><br />
 </p>
 </div>
-<div id="biomedical-engineering-students" class="section level3">
-<h3>Biomedical Engineering Students</h3>
+<div id="biomedical-engineering-students" class="section level4">
+<h4>Biomedical Engineering Students</h4>
 <p><em>Mar Martinez Mas (Columbia University)</em><br />
 </p>
 <p><img src="images/mas.jpg" style="width:25.0%" /></p>
-<p>Mar Martinez Mas is a Master’s student in <a href="https://www.bme.columbia.edu">Biomedical Engineering at Columbia University</a>. She is from Barcelona, Spain, and completed her undergraduate degree at <a href="https://www.upf.edu/es/">Universitat Pompeu Fabra</a> (Barcelona, Spain) where she worked in the field of biomedical electronics. Afterward, she completed the last year and a half of her degree at the <a href="https://www.polimi.it">Politecnico di Milano</a> (Milan, Italy), where she mainly studied the field of biomechanics. Her main interest lies in prosthetic heart valves and life support systems. She joined the Ferrari Lab in 2021.</p>
+<p>Mar Martinez Mas is a Master’s student in <a href="https://www.bme.columbia.edu">Biomedical Engineering at Columbia University</a>. She is from Barcelona, Spain, and completed her undergraduate degree at <a href="https://www.upf.edu/es/">Universitat Pompeu Fabra</a> (Barcelona, Spain) where she worked in the field of biomedical electronics. Afterward, she completed the last year and a half of her degree at the <a href="https://www.polimi.it">Politecnico di Milano</a> (Milan, Italy), where she mainly studied the field of biomechanics. Her main interest lies in prosthetic heart valves and life support systems. She joined the Ferrari Lab in 2021 and is studying the mass and tissue thickening of cardiac valvular bioprostheses under different conditions.</p>
 <p><a href="mailto:%3Cmm5944@columbia.edu%3E">Email</a></p>
 <p><br />
 </p>
 </div>
-<div id="chief-vision-officer" class="section level3">
-<h3>Chief Vision Officer</h3>
+<div id="chief-vision-officer" class="section level4">
+<h4>Chief Vision Officer</h4>
 <p><em>Churro</em></p>
 <p><img src="images/churro.jpg" style="width:25.0%" /></p>
 <p>2 years old Irish-Doodle. Strong interest in any type of food. Life’s not ruff when I am around. Woof</p>
 </div>
-<div id="alumni" class="section level3">
-<h3>Alumni</h3>
+<div id="alumni" class="section level4">
+<h4>Alumni</h4>
 <p>Residents</p>
 <p>Postdocs</p>
 <p><br />
 </p>
 </div>
 </div>
+</div>
 <div id="collaborators" class="section level2">
 <h2><u> Collaborators </u></h2>
 <p><img src="images/levy.jpg" style="width:25.0%" /></p>
 <div id="robert-j.-levy-md" class="section level3">
-<h3>Robert J. Levy, MD</h3>
+<h3>Robert J. Levy, MD<br />
+</h3>
+<p><em>Children’s Hospital of Philadelphia</em><br />
+</p>
 <p>Levy is the director of Cardiology Research, and also serves as program director of the Cardiology National Heart, Lung, and Blood Institute (NHLBI) Research Training Grant.</p>
 <p>His research interests are the pathophysiology of biomaterials used in medicine, basic mechanisms and novel therapies for heart valve disease, arterial angioplasty, local drug delivery, and nanomedicine. He also has experience over three decades in medical device development.</p>
+<p><br />
+</p>
 <p><em>R01HL131872</em></p>
 <p><br />
 </p>
@@ -502,29 +511,65 @@ Section of Pediatric &amp; Congenital Cardiac Surgery<br />
 Director, Pediatric Heart Valve Center<br />
 Surgical Director, Initiative for Pediatric Cardiac Innovation<br />
 Columbia University College of Physicians and Surgeons<br />
-New York-Presbyterian Morgan Stanley Children’s Hospital<br />
 </p>
-<div id="expandable-polymeric-valved-conduit-to-repair-congenital-heart-disease" class="section level4">
-<h4>Expandable Polymeric-valved Conduit to Repair Congenital Heart Disease</h4>
+<p><br />
+</p>
+<p><u> Expandable Polymeric-valved Conduit to Repair Congenital Heart Disease </u></p>
 <p>The proposed research is relevant to public health because a biostable polymeric valved conduit that can be implanted surgically to reconstruct the right ventricular outflow tract in neonates and infants and then expanded by successive transcatheter procedures to reach the adult size, would revolutionize how we treat children with heart valve diseases. Such a new generation of valved conduit would decrease the number of open-heart surgeries and reoperations, decrease the mortality, complications and healthcare costs related to these procedures and increase the life expectancy and quality of life of these patients.</p>
+<p><br />
+</p>
 <p><em>R01HL155381</em></p>
 <p><br />
 </p>
 </div>
-</div>
 <div id="micheal-s-sacks-phd" class="section level3">
-<h3>Micheal S Sacks PhD</h3>
+<h3>Micheal S Sacks PhD<br />
+</h3>
+<p><em>University of Texas at Austin</em></p>
 <p><img src="images/sacks.jpg" style="width:25.0%" /></p>
-<p>The bicuspid aortic valve (BAV) is the most common cardiac congenital anomaly. Due to the widespread availability and routine use of screening echocardiography, development of clinical methods for the identification of asymptomatic young patients with BAV is now realistic. We thus plan to develop sensitive, clinically derivable functional indices that will yield clinically relevant patient- specific strategies for identifying BAV patients at high risk.</p>
+<p>The bicuspid aortic valve (BAV) is the most common cardiac congenital anomaly. Due to the widespread availability and routine use of screening echocardiography, development of clinical methods for the identification of asymptomatic young patients with BAV is now realistic. We thus plan to develop sensitive, clinically derivable functional indices that will yield clinically relevant patient- specific strategies for identifying BAV patients at high risk.<br />
+</p>
+<p><br />
+</p>
 <p><em>R01HL142504</em></p>
-</div>
-<div id="walter" class="section level3">
-<h3>Walter</h3>
+<p><a href="https://wccms.oden.utexas.edu">Lab Website</a></p>
 <p><br />
 </p>
 </div>
 <div id="lara-garibeh-phd" class="section level3">
-<h3>Lara Garibeh PhD</h3>
+<h3>Lara Garibeh PhD<br />
+</h3>
+<p><em>University of Ottawa Heart Institute</em></p>
+<p><em>Canadian Institute of Research and Health (CIHR) Fellowship (2021-2023)</em><br />
+</p>
+<p><img src="images/Lara-Gharibeh.jpg" style="width:25.0%" /></p>
+<p>Identification of Molecular Pathways that Protect Against Atherosclerosis Coronary artery disease (CAD) is one of the leading causes of cardiovascular death worldwide. Current treatments for CAD include lifestyle modifications and medical therapies to reduce its risk factors. When these methods fail, more invasive interventions, such as placement of a stent to restore blood flow or performance of a coronary artery bypass graft surgery, are used. This latter procedure aims at bypassing the blocked area using either veins or arteries. The use of arterial grafts is associated with a better long-term patency and a reduced rate of progression of atherosclerosis when compared to vein grafts. Yet, the exact molecular mechanisms by which arteries are protected from disease progression are not well understood. This study aims to identify the underlying mechanisms that render arteries resistant to atherosclerosis.<br />
+</p>
+<p><a href="https://www.linkedin.com/in/lara-gharibeh/">LinkedIn</a></p>
+<p><br />
+</p>
+</div>
+<div id="juan-b-grau-md" class="section level3">
+<h3>Juan B Grau MD<br />
+</h3>
+<p><em>The Valley Hospital </em></p>
+<p><img src="images/grau.jpg" style="width:25.0%" /></p>
+<p>Dr. Grau’s work blends clinical knowledge and expertise with the tools of basic science to find new approaches to clinically relevant problems. He serves as a reviewer for the Annals of Thoracic Surgery, Journal of the American Heart Association, Circulation, and the British Heart Foundation, among others.<br />
+</p>
+<p><br />
+</p>
+</div>
+<div id="walter-r.-witschey-phd" class="section level3">
+<h3>Walter R. Witschey, PhD<br />
+</h3>
+<p><em>University of Pennsylvania</em> Associate Professor of Radiology<br />
+Director of the Advanced Cardiovascular Imaging Lab at the University of Pennsylvania<br />
+</p>
+<p><img src="images/witschey_walter.jpg" style="width:25.0%" /></p>
+<p>Theoretical and applied advanced imaging, especially magnetic resonance imaging and quantitative cardiovascular imaging.</p>
+<p><a href="https://www.med.upenn.edu/corlab/">Lab Website</a></p>
+<p><br />
+</p>
 </div>
 </div>
 </div>
