--- a/about.html
+++ b/about.html
@@ -373,17 +373,18 @@ div.tocify {
 </div>
 
 
-<div id="our-team" class="section level1">
-<h1>Our Team</h1>
-<div id="primary-investigator" class="section level2">
-<h2><u>Primary Investigator</u></h2>
+<div id="primary-investigator" class="section level1">
+<h1>Primary Investigator</h1>
 <p><br />
 </p>
+<p><img src="images/ferrari.jpg" style="width:25.0%" /></p>
 <div id="giovanni-ferrari-phd" class="section level3">
 <h3>Giovanni Ferrari, PhD</h3>
-<p><img src="images/ferrari.jpg" style="width:25.0%" /></p>
-<p>First-generation graduate (U of Pavia, 2003), I am a group leader and Associate Professor (with tenure) at Columbia University, Dept. of Surgery and Biomedical Engineering. I am Scientific Director of the Cardiothoracic Research Program and Director of the Columbia Biobank for Translational Science, an applied biobank supporting translational and precision medicine initiatives. Heart valve and vascular cell physiology, cardiac mechanobiology, materials science in medical devices, and the brain-heart axis are my main research interests.</p>
-<p></right></p>
+<p>First-generation graduate at the <a href="https://web-en.unipv.it">U of Pavia</a> (2003), I am a group leader and Associate Professor (with tenure) in the Columbia University, <a href="https://columbiasurgery.org/research">Department of Surgery</a> and <a href="https://www.bme.columbia.edu">School of Biomedical Engineering</a>.<br />
+</p>
+<p>I am the Scientific Director of the <a href="https://columbiasurgery.org/research/ferrari-lab">Cardiothoracic Research Program and Director of the Columbia Biobank for Translational Science</a>, an applied biobank supporting translational and precision medicine initiatives.<br />
+</p>
+<p>My main research interests are in heart valve and vascular cell physiology, cardiac mechanobiology, materials science in medical devices, and the brain-heart axis.</p>
 <ul>
 <li><a href="https://twitter.com/ferrag02">Twitter</a></li>
 <li><a href="mailto:%3Cgf2375@cumc.columbia.edu%3E">Email</a></li>
@@ -391,110 +392,159 @@ div.tocify {
 <p><br />
 </p>
 </div>
-<div id="lab-members" class="section level3">
-<h3><u> Lab Members </u></h3>
-<div id="associate-research-scientists" class="section level4">
-<h4>Associate Research Scientists</h4>
-<p><em>Esti Castillero, PhD</em></p>
+</div>
+<div id="ferrari-lab-members" class="section level1">
+<h1>Ferrari Lab Members</h1>
+<p><br />
+</p>
+<div id="associate-research-scientists" class="section level3">
+<h3>Associate Research Scientists</h3>
 <p><img src="images/esti.png" style="width:25.0%" /></p>
-<p>I am a Biomedical Researcher with a PhD in Physiology and Endocrinology. My research focuses on the study of the advanced stages of myocardial and cardiac valve remodeling. My research argues that cardiac remodeling is regulated both at a local and systemic level and that it may, in turn, affect remote tissues by endocrine crosstalk. Currently, I am leading projects that explore myocardium-cardiac valve communication in the adaptation to ischemic injury and the role of circulating factors from the skeletal muscle in cardiac remodeling in end-stage heart failure.</p>
+<div id="esti-castillero-phd" class="section level4">
+<h4><em>Esti Castillero, PhD</em></h4>
+<p>I am a Biomedical Researcher with a PhD in Physiology and Endocrinology. My research focuses on the study of the advanced stages of myocardial and cardiac valve remodeling. My research argues that cardiac remodeling is regulated both at a local and systemic level and that it may, in turn, affect remote tissues by endocrine crosstalk.<br />
+</p>
+<p>Currently, I am leading projects that explore myocardium-cardiac valve communication in the adaptation to ischemic injury and the role of circulating factors from the skeletal muscle in cardiac remodeling in end-stage heart failure.</p>
 <p><a href="mailto:%3Cec2929@cumc.columbia.edu%3E">Email</a><br />
 <em>(recommendations for mystery books welcome)</em></p>
 <p><a href="https://scholar.google.com/citations?hl=en&amp;user=02qHMNkAAAAJ">Google Scholar</a><br />
 </p>
 <p><br />
 </p>
-<p><em>Chiara Camillo, PhD</em></p>
+</div>
+<div id="chiara-camillo-phd" class="section level4">
+<h4><em>Chiara Camillo, PhD</em></h4>
 <p><br />
 </p>
 </div>
-<div id="postdoctoral-research-fellows" class="section level4">
-<h4>Postdoctoral Research Fellows</h4>
-<p><em>Yingfei Xue, PhD</em><br />
-</p>
+</div>
+<div id="postdoctoral-research-fellows" class="section level3">
+<h3>Postdoctoral Research Fellows</h3>
 <p><img src="images/xue.JPG" style="width:25.0%" /></p>
-<p>Dr. Yingfei Xue is currently a postdoctoral research scientist in Dr. Giovanni Ferrari lab at Columbia University. He obtained his PhD degree from <a href="http://www.pharmacy.pitt.edu/research/research_index.php">University of Pittsburgh School of Pharmacy</a>. His research interest is centered around cardiovascular implants including bioprosthetic valves, conduits, and patches. His research goal is to understand the mechanisms of cardiovascular implant failure and improve implant durability. He has 20 publications and served as editorial board member and reviewer for multiple journals in the fields of biomedical engineering.</p>
+<div id="yingfei-xue-phd" class="section level4">
+<h4><em>Yingfei Xue, PhD</em><br />
+</h4>
+<p>Dr. Yingfei Xue is currently a postdoctoral research scientist in Dr. Giovanni Ferrari lab at Columbia University. He obtained his PhD degree from <a href="http://www.pharmacy.pitt.edu/research/research_index.php">University of Pittsburgh School of Pharmacy</a>. His research interest is centered around cardiovascular implants including bioprosthetic valves, conduits, and patches.<br />
+</p>
+<p>His research goal is to better understand the mechanisms of cardiovascular implant failure and improve implant durability. He has 20 publications and served as editorial board member and reviewer for multiple journals in the fields of biomedical engineering.</p>
 <p><a href="mailto:%3Cyx2529@cumc.columbia.edu%3E">Email</a><br />
 </p>
-<p><em>Antonio Frasca, PhD</em></p>
 <p><br />
 </p>
 </div>
-<div id="surgical-residents" class="section level4">
-<h4>Surgical Residents</h4>
-<p><em>Alexey Abramov, MD</em></p>
+<div id="antonio-frasca-phd" class="section level4">
+<h4><em>Antonio Frasca, PhD</em></h4>
+<p><br />
+</p>
+</div>
+</div>
+<div id="surgical-residents" class="section level3">
+<h3>Surgical Residents</h3>
 <p><img src="images/abramov.jpg" style="width:25.0%" /></p>
-<p>Dr. Alexey Abramov is a General Surgery resident in the <a href="https://columbiasurgery.org/general-surgery-residency">New York Presbyterian-Columbia</a> program with an interest in cardiothoracic surgery fellowship and biomedical engineering. He graduated from <a href="http://college.emory.edu/main/index.html">Emory University</a> (Atlanta, GA) and received his medical degree from <a href="https://www.nymc.edu/school-of-medicine-som/">New York Medical College</a> (Valhalla, NY). Currently, Alexey is a post-doctoral research fellow in Dr. Ferrari’s lab studying the underlying mechanisms of structural degeneration of bioprosthetic heart valves with next-generation proteomics. He is also pursuing a Master’s degree in the Department of Biostatistics in the Mailmans School of Public Health in the <a href="https://www.publichealth.columbia.edu/academics/degrees/master-science/clinical-research-methods">Clinical Research Methods</a> track. In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bike.</p>
+<div id="alexey-abramov-md" class="section level4">
+<h4><em>Alexey Abramov, MD</em></h4>
+<p>Dr. Alexey Abramov is a General Surgery resident in the <a href="https://columbiasurgery.org/general-surgery-residency">New York Presbyterian-Columbia</a> program with an interest in cardiothoracic surgery fellowship and biomedical engineering. He graduated from <a href="http://college.emory.edu/main/index.html">Emory University</a> and received his medical degree from <a href="https://www.nymc.edu/school-of-medicine-som/">New York Medical College</a>.<br />
+</p>
+<p>Currently, he is a post-doctoral research fellow in Dr. Ferrari’s lab studying the underlying mechanisms of structural degeneration of bioprosthetic heart valves with next-generation proteomics. He is also pursuing a Master’s degree in the <a href="https://www.publichealth.columbia.edu/academics/degrees/master-science/clinical-research-methods">Department of Biostatistics in the Mailmans School of Public Health</a> track.<br />
+In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bike.</p>
 <p><a href="mailto:%3Caa3832@cumc.columbia.edu%3E">Email</a></p>
-<p><em>Dov Levine, MD</em></p>
-<p><em>Clinton Erwin, MD</em></p>
+<p><br />
+</p>
+</div>
+<div id="dov-levine-md" class="section level4">
+<h4><em>Dov Levine, MD</em></h4>
+<p><br />
+</p>
 <p><img src="images/clint.jpg" style="width:25.0%" /></p>
-<p>Clinton is a resident in Integrated Cardiothoracic surgery at New York Presbyterian-Columbia. He obtained his MD from University of Alabama, Birmingham, where he developed an interest in cardiac surgery. / Now having completed 3 years of residency, he is currently studying the mechanisms of cardiovascular damage related to COVID-19, along with several clinical projects in adult cardiac surgery.</p>
+</div>
+<div id="clinton-erwin-md" class="section level4">
+<h4><em>Clinton Erwin, MD</em></h4>
+<p>Clinton is a resident in <a href="https://columbiasurgery.org/cardiothoracic-training">Integrated Cardiothoracic surgery at New York Presbyterian-Columbia</a>. He obtained his MD from <a href="https://www.uabmedicine.org">University of Alabama at Birmingham</a>, where he developed an interest in cardiac surgery.<br />
+</p>
+<p>Now having completed 3 years of residency, he is currently studying the mechanisms of cardiovascular damage related to COVID-19, along with several clinical projects in adult cardiac surgery.</p>
 <p><a href="mailto:%3Cwe2153@cumc.columbia.edu%3E">Email</a></p>
-<p><em>Michael Simpson, MD</em></p>
+<p><br />
+</p>
+</div>
+<div id="michael-simpson-md" class="section level4">
+<h4><em>Michael Simpson, MD</em></h4>
 <p>Michael is a resident in the Integrated Cardiothoracic Surgery residency program at New York Presbyterian-Columbia. He obtained his MD from Columbia University College of Physicians &amp; Surgeons. He has completed three years of his cardiac surgical training and has an interest in aortic surgery and structural heart disease. He is currently studying pathologic mechanisms in mitral valve disease and is involved in several clinical projects across the spectrum of adult cardiac surgery.</p>
 <p><a href="mailto:%3Cmts2153@cumc.columbia.edu%3E">Email</a></p>
 <p><br />
 </p>
 </div>
-<div id="biobank" class="section level4">
-<h4>Biobank</h4>
-<p><em>Vivian Moreno</em></p>
+</div>
+<div id="biobank" class="section level3">
+<h3>Biobank</h3>
 <p><img src="images/viv.jpg" style="width:25.0%" /></p>
-<p>Vivian Moreno is the Clinical Research Coordinator for the Ferrari Lab. She completed her Bachelor’s of Science in Biomedical Science at the University of Kent in Canterbury, England. Her research background includes cancer research at Yale University and novel antimicrobial peptides at NovaBiotics, Ltd. Her favorite pastimes include playing the piano, volunteering, and working out at AARMY.</p>
+<div id="vivian-moreno" class="section level4">
+<h4><em>Vivian Moreno</em></h4>
+<p>Vivian Moreno is the Clinical Research Coordinator for the Ferrari Lab. She completed her Bachelor’s of Science in Biomedical Science at the <a href="https://www.kent.ac.uk">University of Kent in Canterbury, England</a>. Her research background includes cancer research at Yale University and novel antimicrobial peptides at <a href="https://novabiotics.co.uk">NovaBiotics, Ltd</a>. Her favorite pastimes include playing the piano, volunteering, and working out at AARMY.</p>
 <p><a href="mailto:%3Cvmm2142@cumc.columbia.edu%3E">Email</a></p>
 <p><br />
 </p>
 </div>
 <div id="lab-manager" class="section level4">
 <h4>Lab Manager</h4>
-<p><em>Mangesh Kurade</em></p>
+</div>
+<div id="mangesh-kurade" class="section level4">
+<h4><em>Mangesh Kurade</em></h4>
 <p><br />
 </p>
 </div>
-<div id="medical-students" class="section level4">
-<h4>Medical Students</h4>
-<p><em>Nicolo Vitale (U of Milan)</em></p>
+</div>
+<div id="medical-students" class="section level3">
+<h3>Medical Students</h3>
 <p><img src="images/niko.jpg" style="width:25.0%" /></p>
-<p><em>Eduardo (U of Bologna)</em></p>
-<p><em>Evan (Morehouse School of Medicine)</em></p>
+<div id="nicolo-vitale-u-of-milan" class="section level4">
+<h4><em>Nicolo Vitale (U of Milan)</em></h4>
+</div>
+<div id="eduardo-u-of-bologna" class="section level4">
+<h4><em>Eduardo (U of Bologna)</em></h4>
+</div>
+<div id="evan-morehouse-school-of-medicine" class="section level4">
+<h4><em>Evan (Morehouse School of Medicine)</em></h4>
 <p><br />
 </p>
 </div>
-<div id="biomedical-engineering-students" class="section level4">
-<h4>Biomedical Engineering Students</h4>
-<p><em>Mar Martinez Mas (Columbia University)</em><br />
-</p>
+</div>
+<div id="biomedical-engineering-students" class="section level3">
+<h3>Biomedical Engineering Students</h3>
 <p><img src="images/mas.jpg" style="width:25.0%" /></p>
+<div id="mar-martinez-mas-columbia-university" class="section level4">
+<h4><em>Mar Martinez Mas (Columbia University)</em><br />
+</h4>
 <p>Mar Martinez Mas is a Master’s student in <a href="https://www.bme.columbia.edu">Biomedical Engineering at Columbia University</a>. She is from Barcelona, Spain, and completed her undergraduate degree at <a href="https://www.upf.edu/es/">Universitat Pompeu Fabra</a> (Barcelona, Spain) where she worked in the field of biomedical electronics. Afterward, she completed the last year and a half of her degree at the <a href="https://www.polimi.it">Politecnico di Milano</a> (Milan, Italy), where she mainly studied the field of biomechanics. Her main interest lies in prosthetic heart valves and life support systems. She joined the Ferrari Lab in 2021 and is studying the mass and tissue thickening of cardiac valvular bioprostheses under different conditions.</p>
 <p><a href="mailto:%3Cmm5944@columbia.edu%3E">Email</a></p>
 <p><br />
 </p>
 </div>
-<div id="chief-vision-officer" class="section level4">
-<h4>Chief Vision Officer</h4>
-<p><em>Churro</em></p>
+</div>
+<div id="chief-vision-officer" class="section level3">
+<h3>Chief Vision Officer</h3>
 <p><img src="images/churro.jpg" style="width:25.0%" /></p>
+<div id="churro" class="section level4">
+<h4><em>Churro</em></h4>
 <p>2 years old Irish-Doodle. Strong interest in any type of food. Life’s not ruff when I am around. Woof</p>
 </div>
-<div id="alumni" class="section level4">
-<h4>Alumni</h4>
+</div>
+<div id="alumni" class="section level3">
+<h3>Alumni</h3>
 <p>Residents</p>
 <p>Postdocs</p>
 <p><br />
 </p>
 </div>
 </div>
-</div>
-<div id="collaborators" class="section level2">
-<h2><u> Collaborators </u></h2>
+<div id="collaborators" class="section level1">
+<h1>Collaborators</h1>
 <p><img src="images/levy.jpg" style="width:25.0%" /></p>
 <div id="robert-j.-levy-md" class="section level3">
 <h3>Robert J. Levy, MD<br />
 </h3>
 <p><em>Children’s Hospital of Philadelphia</em><br />
 </p>
-<p>Levy is the director of Cardiology Research, and also serves as program director of the Cardiology National Heart, Lung, and Blood Institute (NHLBI) Research Training Grant.</p>
+<p>Levy is the director of Cardiology Research, and also serves as program director of the Cardiology <a href="http://www.nhlbi.nih.gov">National Heart, Lung, and Blood Institute (NHLBI)</a> Research Training Grant.</p>
 <p>His research interests are the pathophysiology of biomaterials used in medicine, basic mechanisms and novel therapies for heart valve disease, arterial angioplasty, local drug delivery, and nanomedicine. He also has experience over three decades in medical device development.</p>
 <p><br />
 </p>
@@ -514,7 +564,7 @@ Columbia University College of Physicians and Surgeons<br />
 </p>
 <p><br />
 </p>
-<p><u> Expandable Polymeric-valved Conduit to Repair Congenital Heart Disease </u></p>
+<p>Expandable Polymeric-valved Conduit to Repair Congenital Heart Disease</p>
 <p>The proposed research is relevant to public health because a biostable polymeric valved conduit that can be implanted surgically to reconstruct the right ventricular outflow tract in neonates and infants and then expanded by successive transcatheter procedures to reach the adult size, would revolutionize how we treat children with heart valve diseases. Such a new generation of valved conduit would decrease the number of open-heart surgeries and reoperations, decrease the mortality, complications and healthcare costs related to these procedures and increase the life expectancy and quality of life of these patients.</p>
 <p><br />
 </p>
@@ -570,7 +620,6 @@ Director of the Advanced Cardiovascular Imaging Lab at the University of Pennsyl
 <p><a href="https://www.med.upenn.edu/corlab/">Lab Website</a></p>
 <p><br />
 </p>
-</div>
 </div>
 </div>
 
